--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         <div class="contacto-formulario">
 
-            <form action="enviar.php" method="post">
+            <form action="https://formspree.io/f/mjvnvdby" method="post">
 
                 <label for="nombre">Nombre:</label>
 
