--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <header>
-
         <h1><a href="#home">Enrique Developer</a></h1>
+        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <nav>
             <ul>
                 <li><a href="#home">HOME</a></li>
