index and css update

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <br> <br>
 
-        <center><button class="boton_contacto">DESCARGAR CV</button></center>
+        <center><button class="boton_contacto"><a href="archivos/Enrique_Gomez_Rojas_CV.pdf" download="Enrique_Gomez_Rojas_CV">DESCARGAR CV</a></button></center>
 
     </div>
 
