commit de los commits

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <nav>
             <ul>
-                <li><a href="#home">HOME</a></li>
                 <li><a href="#proyectos">PROYECTOS</a></li>
                 <li><a href="#sobre_mi">SOBRE MÍ</a></l>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <div class="container_1" id="home">
@@ -276,6 +276,10 @@
 
     <footer>
         <h3>@Enrique Gómez Rojas</h3>
+
+        <h3>enrikus2004@gmail.com</h3>
+
+        <h3> +34 626576525 </h3>
         <div class="footer_images">
             <a href="https://www.linkedin.com/in/enrique-gómez-rojas-04b086252/"><img src="img/linkedin.svg"></a>
             <a href="https://github.com/EnriqueGomez7"><img src="img/github.svg"></a>
