--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container_1" id="home">
 
         <div class="container_1_seccion_1">
-            <center><h1>ENRIQUE GOMEZ ROJAS <br> {DESARROLLADOR DE SOFTWARE}</h1></center>
+            <center><h1>ENRIQUE GÓMEZ ROJAS <br> {DESARROLLADOR DE SOFTWARE}</h1></center>
         </div>
 
         <div class="slider">
