--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div id="container_3_seccion1" class="contenido">
                     <h2>Te cuento un poco sobre mí</h2> <br>
                     <h4>¡Hola! Soy Enrique Gómez Rojas, un apasionado de la informática que se adentró en el mundo del Desarrollo Software. Ahora que estoy inmerso en él ¡Mis ansias de conocimiento no conocen límites! <br> <br>El camino que he decidido emprender será duro, pero es el que elegí y no podría ser más feliz por ello. <br> <br> ¡La vida me tiene preparado muchos retos y yo los afrontaré con coraje, optimismo y ganas de aprender!</h4>
-                    <center><button class="boton_contacto"><a href="archivos/Enrique_Gomez_Rojas_CV.pdf" download="Enrique_Gomez_Rojas_CV">DESCARGAR CV</a></button></center>
+                    <center><button class="boton cv"><a href="archivos/Enrique_Gomez_Rojas_CV.pdf" download="Enrique_Gomez_Rojas_CV">DESCARGAR CV</a></button></center>
                 </div>
         
                 <div id="container_3_seccion2" class="contenido">
@@ -262,7 +262,7 @@
 
                 <textarea id="mensaje" name="mensaje" rows="10" required autocomplete="off" placeholder="¡Cuéntame lo que necesites!"></textarea> <br> <br> <br>
     
-                <button type="submit" class="boton_contacto">Enviar mensaje</button>
+                <button type="submit" class="boton contacto">Enviar mensaje</button>
 
             </form>
 
