--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enrique Developer</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="img/Copia-de-icono-_1_.ico">
 </head>
 
 <body>
